--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(./images/tlj.jpg);
+  background-image: url(./images/TLJ.jpg);
   background-size: cover;
   color: white;
   text-align: center;
