--- a/responsive.css
+++ b/responsive.css
@@ -2,6 +2,7 @@
 @media (max-width: 1000px) {
   .top-wrapper h1 {
     font-size: 32px;
+	text-align: center;
   }  
   
   .heading h2 {
@@ -37,11 +38,13 @@
   .top-wrapper h1 {
     font-size: 24px;
     line-height: 36px;
-  }  
+	text-align: center;
+	}  
 
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
+	text-align: center;	
   }  
 
   .btn {
