--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,15 @@ a {
   color: yellow;
 }
 
+.top-wrapper h1:hover {
+  opacity: 1;
+  font-size: 45px;
+  letter-spacing: 10px;
+  margin-bottom: 25px;
+  line-height:30px;
+  color: yellow;
+}
+
 .top-wrapper p {
   opacity: 0.7;
   margin-bottom: 3px;
