--- a/responsive.css
+++ b/responsive.css
@@ -14,6 +14,11 @@
     float: left;
   }
 
+  .container {
+	width: max-width;  
+    text-align: center;
+  }
+
 }
 
 /* Untuk Smartphone */
@@ -46,6 +51,7 @@
   }
   
   .container {
+	width: max-width;  
     text-align: center;
   }
 }
