--- a/responsive.css
+++ b/responsive.css
@@ -15,7 +15,7 @@
   }
 
   .container {
-	width: max-width;  
+	width: 50%;  
     text-align: center;
   }
 
@@ -51,7 +51,7 @@
   }
   
   .container {
-	width: max-width;  
+	width: 100%;  
     text-align: center;
   }
 }
