--- a/responsive.css
+++ b/responsive.css
@@ -36,18 +36,23 @@
     line-height: 36px;
   }  
 
+  .top-wrapper h1:hover {
+    font-size: 24px;
+    line-height: 36px;
+  }  
+
   .top-wrapper p {
     font-size: 14px;
     line-height: 20px;
   }  
 
   .btn {
-    width: 50%;
+    width: 25%;
 
   }
   
   .lesson {
-    width: 50%;
+    width: 25%;
   }
   
   .container {
