--- a/responsive.css
+++ b/responsive.css
@@ -3,13 +3,17 @@
   .top-wrapper h1 {
     font-size: 32px;
   }  
+
+  .top-wrapper h1:hover {
+    font-size: 32px;
+  }  
   
   .heading h2 {
     font-size: 20px;
   }
   
   .lesson {
-    width: 50%;
+    width: 100%;
     margin-bottom: 50px;
     float: left;
   }
@@ -47,12 +51,12 @@
   }  
 
   .btn {
-    width: 25%;
+    width: 100%;
 
   }
   
   .lesson {
-    width: 25%;
+    width: 100%;
   }
   
   .container {
