--- a/responsive.css
+++ b/responsive.css
@@ -51,8 +51,9 @@
   }  
 
   .btn {
-    width: 75%;
-
+    width: 20%;
+	margin: 10px;
+	padding: 10px;
   }
   
   .lesson-wrapper {
@@ -79,4 +80,5 @@
   
   .heading h3 {
 	  font-size-adjust: 25%;
+  }
 }
