--- a/responsive.css
+++ b/responsive.css
@@ -17,11 +17,26 @@
     margin-bottom: 50px;
     float: left;
   }
+  
+  .lesson-wrapper {
+	height: 200%;
+  }
+
+  
+  .lesson-icon img {
+	  size:50%;
+  }
+
 
   .container {
 	width: 100%;  
     text-align: center;
   }
+  
+  .btn {
+    width: 50%;
+  }
+
 
 }
 
@@ -55,7 +70,7 @@
   }
   
   .lesson-wrapper {
-	height: 200%;
+	height: 400%;
   }
 
   
@@ -77,6 +92,6 @@
   }
   
   .heading h3 {
-	  font-size: 10px;
+	  font-size: 12px;
   }
 }
