--- a/responsive.css
+++ b/responsive.css
@@ -70,7 +70,7 @@
   }  
 
   .btn {
-    width: 85%;
+    width: 80%;
   }
   
   .lesson-wrapper {
@@ -97,5 +97,6 @@
   
   .heading h3 {
 	  font-size: 12px;
+	  line-height: 16px;
   }
 }
