--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ a {
 }
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  width: 100%;
   background-image: url(./images/tlj.jpg);
   background-size: cover;
   color: white;
@@ -131,13 +131,12 @@ header {
 }
 
 .heading {
-  padding-top: 60px;
-  padding-bottom: 30px;
+  width: 100%;	
+  padding: 60px 60px;
   color: #5f5d60;
 }
 
 .heading h2 {
-  margin-top: 0;
   font-weight: normal;
   text-align: center;
 }
@@ -145,7 +144,7 @@ header {
 /* Tambahkan CSS untuk lesson */
 .lesson {
   float: left;
-  width: 25%;
+  width: 100%;
 }
 
 .lesson-icon {
