--- a/responsive.css
+++ b/responsive.css
@@ -1,5 +1,13 @@
 /* Untuk Tablet */
 @media (max-width: 1000px) {
+  header {
+	width: 100%;  
+  }	  
+
+  .top-wrapper {
+	width: 100%;  
+  }	  
+
   .top-wrapper h1 {
     font-size: 32px;
   }  
@@ -19,6 +27,7 @@
   }
   
   .lesson-wrapper {
+	width: 100%;
 	height: 200%;
   }
 
@@ -40,12 +49,22 @@
   .btn {
     width: 50%;
   }
-
+  
+  .message-wrapper {
+	width: 100%  
+  }
+  
+  footer {
+	width: 100%  
+  }
 
 }
 
 /* Untuk Smartphone */
 @media (max-width: 670px) {
+  header {
+    width: 100%;	   
+  }	  
   .header-right {
     display: none;
   }
@@ -54,6 +73,10 @@
     display: block;
   }
   
+  .top-wrapper {
+    width: 100%;	   
+  }	  
+
   .top-wrapper h1 {
     font-size: 24px;
     line-height: 36px;
@@ -74,6 +97,7 @@
   }
   
   .lesson-wrapper {
+	width: 100%;  
 	height: 400%;
   }
 
@@ -99,4 +123,13 @@
 	  font-size: 12px;
 	  line-height: 20px;
   }
+  
+  .message-wrapper {
+	width: 100%;  
+  }
+  
+  footer {
+	width: 100%  
+  }
+  
 }
