--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,14 @@ a {
 
 .container {
   width: 100%;
-  padding: 0 15px;
+  padding: 0;
   margin: 0 auto;
 }
 
 .top-wrapper {
   width: 100%;
   top: 65px;
-  padding: 60px;
+  padding: 0;
   background-image: url(./images/tlj.jpg);
   background-size: cover;
   color: white;
@@ -66,7 +66,7 @@ a {
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.8;
+  opacity: 0.7;
   border-radius: 14px;
 }
 
@@ -92,7 +92,6 @@ header {
 
 .logo {
   float: left;
-  left:0;
   width: 50px;
   height: 50px;
   margin: 5px 5px;
@@ -135,7 +134,7 @@ header {
 
 .heading {
   width: 100%;	
-  padding: 60px 60px;
+  padding: 60px;
   color: #5f5d60;
 }
 
@@ -205,8 +204,8 @@ header {
 }
 
 .message {
-  margin: 5px;	
-  padding: 20px 40px;
+  margin: 10px;	
+  padding: 20px 20px;
   background-color: #5dca88;
   cursor: pointer;
   box-shadow: 0 7px #1a7940;
@@ -220,7 +219,7 @@ header {
 
 footer {
   width: 100%  
-  padding: 20px;
+  padding: 0;
   background-color: #f7f7f7;
 }
 
