--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,17 @@
-body {
+/* Mulai code Anda dari baris terakhir */
+
+* {
+  box-sizing: border-box;
+}
+
+html, body,
+ul, ol, li,
+h1, h2, h3, h4, h5, h6, p, div {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: "Lucida Grande";
 }
 
@@ -7,17 +19,19 @@ a {
   text-decoration: none;
 }
 
+.clear {
+  clear: left;
+}
+
 .container {
-  width: 100%;
-  padding: 0;
+  max-width: 1170px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
 .top-wrapper {
-  width: 100%;
-  top: 65px;
-  padding: 0;
-  background-image: url(./images/tlj.jpg);
+  padding: 180px 0 100px 0;
+  background-image: url(tlj.jpg);
   background-size: cover;
   color: white;
   text-align: center;
@@ -27,28 +41,16 @@ a {
   opacity: 0.7;
   font-size: 45px;
   letter-spacing: 5px;
-  margin-bottom: 25px;
-  line-height:30px;
-  color: yellow;
-}
-
-.top-wrapper h1:hover {
-  opacity: 1;
-  font-size: 45px;
-  letter-spacing: 10px;
-  margin-bottom: 25px;
-  line-height:30px;
-  color: yellow;
+  margin-bottom: 10px;
 }
 
 .top-wrapper p {
   opacity: 0.7;
   margin-bottom: 3px;
-  line-height:5px;
-  color: #27ff00;
 }
 
 .btn-wrapper {
+  text-align: center;
   margin: 20px 0;
 }
 
@@ -56,65 +58,57 @@ a {
   margin: 10px 0;
 }
 
-.wa {
+.signup {
   background-color: #239b76;
-  box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.75);
 }
 
+.facebook {
+  background-color: #3b5998;
+  margin-right: 10px;
+}
+
+.twitter {
+  background-color: #55acee;
+}
 
 .btn {
   padding: 12px 24px;
   color: white;
   display: inline-block;
-  opacity: 0.7;
-  border-radius: 14px;
+  opacity: 0.8;
+  border-radius: 4px;
+  text-align: center;
 }
 
 .btn:hover {
   opacity: 1;
 }
 
+.fa {
+  margin-right: 5px;
+}
+
 header {
   height: 65px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
-  /* Ubah position ke fixed, dan top ke 0 */
-  position: fixed;
+  position :fixed;
   top: 0;
-  /* Ubah z-index ke 10 */
   z-index: 10;
 }
 
-.header-left {
-  left: 0;	
-  float: left;
-}
-
 .logo {
-  float: left;
-  width: 50px;
-  height: 50px;
-  margin: 5px 5px;
-  padding: 5px 5px;
+  width: 124px;
+  margin-top: 20px;
 }
 
-.header-left h1 {
-  width: 300px;
-  font-size: 20px;
-  color: white;
-  margin: 5px 5px;
-  padding: 5px 5px;
-  line-height: 50px;
+.header-left {
+  float: left;
 }
 
 .header-right {
   float: right;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: all 0.5s;
-}
-
-.header-right:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+  margin-right: -25px;
 }
 
 .header-right a {
@@ -122,29 +116,32 @@ header {
   padding: 0 25px;
   color: white;
   display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.header-right a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .lesson-wrapper {
-  width: 100%;
-  height: 400px;
   padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
   background-color: #f7f7f7;
   text-align: center;
 }
 
 .heading {
-  width: 100%;	
-  padding: 60px;
+  padding-top: 80px;
+  padding-bottom: 50px;
   color: #5f5d60;
 }
 
 .heading h2 {
-  margin-top: 0;
   font-weight: normal;
-  text-align: center;
 }
 
-/* Tambahkan CSS untuk lesson */
 .lesson {
   float: left;
   width: 25%;
@@ -154,58 +151,33 @@ header {
   position: relative;
 }
 
-.lesson-icon img {
-  opacity: 0.5;
-}
-
-.lesson-icon img:hover {
-  opacity: 0.7;
-}
-
-.lesson-icon img:active {
-  opacity: 1;
-}
-
 .lesson-icon p {
   position: absolute;
-  top: 60px;
+  top: 44%;
   width: 100%;
   color: white;
-  font-size: 24px;
-}
-
-.lesson-icon p:hover {
-  opacity: 0.7;
-}
-
-.lesson-icon p:active {
-  opacity: 1;
 }
 
 .txt-contents {
   width: 80%;
   display: inline-block;
-  margin-top: 20px;
+  margin-top: 15px;
   font-size: 15px;
   color: #b3aeb5;
 }
-
 
 .heading h3 {
   font-weight: normal;
 }
 
 .message-wrapper {
-  width: 100%;	
   border-bottom: 1px solid #eee;
   padding-bottom: 80px;
   text-align: center;
-  line-height: 5px;
 }
 
 .message {
-  margin: 10px;	
-  padding: 20px 20px;
+  padding: 15px 40px;
   background-color: #5dca88;
   cursor: pointer;
   box-shadow: 0 7px #1a7940;
@@ -217,19 +189,25 @@ header {
   box-shadow: none;
 }
 
-footer {
-  width: 100%  
-  padding: 0;
-  background-color: #f7f7f7;
+footer img {
+  width: 125px;
 }
 
-/* Tambahkan CSS untuk tag <p> yang berada didalam <footer> */
 footer p {
   color: #b3aeb5;
   font-size: 12px;
 }
 
-footer a {
-  color: blue;
-  font-size: 12px;
+footer {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+
+/* Ketik code Anda dibawah */
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
 }
