--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,17 +58,8 @@ a {
   margin: 10px 0;
 }
 
-.signup {
+.wa {
   background-color: #239b76;
-}
-
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
-
-.twitter {
-  background-color: #55acee;
 }
 
 .btn {
@@ -99,7 +90,7 @@ header {
 
 .logo {
   width: 124px;
-  margin-top: 20px;
+  margin-top: 0px;
 }
 
 .header-left {
