--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,15 @@
 /* Untuk Tablet */
 @media (max-width: 1000px) {
   .top-wrapper h1 {
+    font-size: 40px;
+  }  
+
+  .top-wrapper h2 {
     font-size: 32px;
+  }  
+
+  .top-wrapper h3 {
+    font-size: 24px;
   }  
   
   .heading h2 {
@@ -22,19 +30,20 @@
 /* Untuk Smartphone */
 @media (max-width: 670px) {
   .header-right {
-    display: none;
-  }
-  
-  .menu-icon {
     display: block;
   }
-  
+
   .top-wrapper h1 {
-    font-size: 24px;
+    font-size: 36px;
     line-height: 36px;
   }  
 
   .top-wrapper h2 {
+    font-size: 24px;
+    line-height: 36px;
+  }  
+
+  .top-wrapper h3 {
     font-size: 20px;
     line-height: 36px;
   }  
