--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,10 +39,11 @@ a {
 
 .top-wrapper h1 {
   opacity: 0.7;
-  font-size: 45px;
+  font-size: 60px;
   letter-spacing: 10px;
   margin-bottom: 10px;
   color: yellow;
+  text-shadow: 3px 2px 1px grey;  
 }
 
 .top-wrapper h1:hover {
@@ -52,19 +53,34 @@ a {
 
 .top-wrapper h2 {
   opacity: 0.8;
-  font-size: 36px;
-  letter-spacing: 5px;
+  font-size: 45px;
+  letter-spacing: 10px;
   margin-bottom: 10px;
   color: white;
+  text-shadow: 3px 2px 1px grey;  
 }
 
 .top-wrapper h2:hover {
   opacity: 1;
 }
+.top-wrapper h3 {
+  opacity: 0.8;
+  font-size: 36px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+  color: yellow;
+  text-shadow: 3px 2px 1px grey;  
+}
+
+.top-wrapper h3:hover {
+  opacity: 1;
+}
+
 .top-wrapper p {
   opacity: 1;
   margin-bottom: 3px;
   color: white;
+  text-shadow: 1px 1px 1px black;  
 }
 
 .btn-wrapper img {
@@ -217,13 +233,4 @@ footer p {
 footer {
   padding-top: 30px;
   padding-bottom: 20px;
-}
-
-/* Ketik code Anda dibawah */
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
 }
