--- a/responsive.css
+++ b/responsive.css
@@ -44,7 +44,8 @@
   }
 
   .header-right a {
-    line-height: 17px;
+    top: 0;
+    line-height: 35px;
   }
   .top-wrapper h1 {
     font-size: 36px;
