--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,6 +44,7 @@ a {
   margin-bottom: 10px;
   color: yellow;
   text-shadow: 3px 2px 1px grey;  
+  transition: letter-spacing 2s;
 }
 
 .top-wrapper h1:hover {
